# ESP32_Zephyr_RTOS_WebServer_LED_Control

./: CMakeLists.txt  Logs.txt  prj.conf
boards/: esp32c3_devkitm.conf  esp32c3_devkitm.overlay
src/: main.c
